- Added Email for users - Fixed a few css bugs

--- a/src/app/intervention/components/intervention-list/intervention-list.component.html
+++ b/src/app/intervention/components/intervention-list/intervention-list.component.html
@@ -81,7 +81,7 @@
 <div class="flex items-center">
   <table class="w-full flex flex-row flex-no-wrap sm:bg-white rounded-lg sm:shadow-lg my-5 overflow-auto">
     <thead class="text-white sm:border-b-2-black">
-      <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+      <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2 border-primary">
         <th class="p-3 text-left">ID</th>
         <th class="p-3 text-left">Ticket</th>
         <th class="p-3 text-left">Type</th>
@@ -92,7 +92,7 @@
         <th class="p-3 text-left">Unité</th>
         <th class="p-3 text-left h-14" width="110px">Actions</th>
       </tr>
-      <tr *ngFor="let item of dataSource.data | filter:filterBy.value!:['type','id'] | filter:searchUserSelect.value:['user','id'] | filter:searchItemSelect.value!:['item','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+      <tr *ngFor="let item of dataSource.data | filter:filterBy.value!:['type','id'] | filter:searchUserSelect.value:['user','id'] | filter:searchItemSelect.value!:['item','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2 border-primary">
         <th class="p-3 text-left">ID</th>
         <th class="p-3 text-left">Ticket</th>
         <th class="p-3 text-left">Type</th>
@@ -105,7 +105,7 @@
       </tr>
     </thead>
     <tbody class="flex-1 sm:flex-none">
-      <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row sm:mb-2 mb-0 border-grey-light">
+      <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row sm:mb-2 mb-0 border-grey-light ">
         <td class="hover:bg-gray-100 p-3">Pas de donnée</td>
         <td class="hover:bg-gray-100 p-3"></td>
         <td class="hover:bg-gray-100 p-3"></td>
