--- a/src/app/item/components/item-details/item-details.component.html
+++ b/src/app/item/components/item-details/item-details.component.html
@@ -103,7 +103,7 @@
             </div>
             <div class="max-w-full overflow-auto">
                 <div class="font-bold text-xl pb-4 ">
-                    <h2>Interventions:</h2>
+                    <h2>Opérations:</h2>
                 </div>
                 <table class="table-auto w-full">
                     <thead class="text-left">
