--- a/src/app/licence/components/licence-list/licence-list.component.html
+++ b/src/app/licence/components/licence-list/licence-list.component.html
@@ -74,7 +74,7 @@
   </div>
   <table class="w-full flex flex-row flex-no-wrap sm:bg-white rounded-lg sm:shadow-lg overflow-auto">
     <thead class="text-white sm:border-b-2-black">
-      <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+      <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2 border-primary">
         <th class="p-3 text-left h-14 sm:w-40">ID</th>
         <th class="p-3 text-left">Type</th>
         <th class="p-3 text-left">Description</th>
@@ -82,7 +82,7 @@
         <th class="p-3 text-left">Utilisateur</th>
         <th class="p-3 text-left h-14">Actions</th>
       </tr>
-      <tr *ngFor="let licence of dataSource.data | filter:filterBy.value!:['type','id'] | filter:searchUserSelect.value:['user','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2">
+      <tr *ngFor="let licence of dataSource.data | filter:filterBy.value!:['type','id'] | filter:searchUserSelect.value:['user','id'] | sort:isAsc.value:sortBy.value! | search:searchBy.value!" class="flex flex-col flex-no-wrap sm:table-row rounded-l-lg sm:rounded-none mb-0 sm:mb-2 border-primary">
         <th class="p-3 text-left h-14 sm:w-40">ID</th>
         <th class="p-3 text-left h-12">Type</th>
         <th class="p-3 text-left h-12">Description</th>
@@ -92,7 +92,7 @@
       </tr>
     </thead>
     <tbody class="flex-1 sm:flex-none">
-      <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row sm:mb-2 mb-0 border-grey-light">
+      <tr *ngIf="dataSource.data.length<=0" class="flex flex-col flex-no-wrap sm:table-row sm:mb-2 mb-0 border-grey-light border-primary">
         <td class="hover:bg-gray-100 p-3 h-14 sm:w-40">Pas de donnée</td>
         <td class="hover:bg-gray-100 p-3 h-12"></td>
         <td class="hover:bg-gray-100 p-3 h-12"></td>
