--- a/src/app/user/components/user-details/user-details.component.html
+++ b/src/app/user/components/user-details/user-details.component.html
@@ -23,6 +23,10 @@
                 <input disabled name="username" [(ngModel)]="user.username" type="text" id="username" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
             </div>
             <div>
+                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Prénom</label>
+                <input [disabled]="is_locked" name="email" [(ngModel)]="user.email" type="text" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            </div>
+            <div>
                 <label for="firstname" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nom</label>
                 <input [disabled]="is_locked" name="firstname" [(ngModel)]="user.firstname" type="text" id="firstname" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
             </div>
@@ -44,7 +48,7 @@
                 <div class="mr-4 h-10 w-full">
                     <input type="text" matInput [formControl]="searchRoleSelect"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    placeholder="Chercher une licence"
+                    placeholder="Chercher un rôle"
                     [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="getRoleName.bind(this)" >
                     <mat-option *ngFor="let role of filteredRoleOptions | async" [value]="role.id">
