--- a/src/app/intervention/components/intervention-list/intervention-list.component.scss
+++ b/src/app/intervention/components/intervention-list/intervention-list.component.scss
@@ -6,6 +6,10 @@ $color-config:    mat.get-color-config($chr-theme);
 $primary-palette: map.get($color-config, 'primary');
 $accent-palette: map.get($color-config, 'accent');
 
+.text-primary{
+  color: mat.get-color-from-palette($primary-palette);
+}
+
 thead {
   background-color: mat.get-color-from-palette($accent-palette, A200);
 }
@@ -18,18 +22,10 @@ thead {
     thead tr:not(:first-child) {
       display: none;
     }
-    td:not(:last-child) {
-      border-bottom: 0;
-    }
-    th{
-      border-bottom: 2px solid rgba(0, 0, 0, .1);
+
+    .border-primary{
+      border-width: 2px;
+      --tw-border-opacity: 1;
+      border-color: mat.get-color-from-palette($accent-palette, A200);
     }
   }
-
-td:not(:last-child) {
-  border-bottom: 0;
-}
-
-th:is(:last-child){
-  border-bottom: 2px solid rgba(0, 0, 0, .1);
-}
