--- a/src/app/licence/components/licence-list/licence-list.component.scss
+++ b/src/app/licence/components/licence-list/licence-list.component.scss
@@ -10,26 +10,18 @@ thead {
   background-color: mat.get-color-from-palette($accent-palette, A200);
 }
 
-@media (min-width: 640px) {
-  table {
-    display: inline-table !important;
-  }
+  @media (min-width: 640px) {
+    table {
+      display: inline-table !important;
+    }
 
-  thead tr:not(:first-child) {
-    display: none;
-  }
-  td:not(:last-child) {
-    border-bottom: 0;
-  }
-  th{
-    border-bottom: 2px solid rgba(0, 0, 0, .1);
-  }
-}
+    thead tr:not(:first-child) {
+      display: none;
+    }
 
-td:not(:last-child) {
-border-bottom: 0;
-}
-
-th:is(:last-child){
-border-bottom: 2px solid rgba(0, 0, 0, .1);
-}
+    .border-primary{
+      border-width: 2px;
+      --tw-border-opacity: 1;
+      border-color: mat.get-color-from-palette($accent-palette, A200);
+    }
+  }
